refactor: architecture hardening, security, and performance optimizations
- Security: Move hardcoded credentials to env vars and add API Key auth.
- Performance: Fix N+1 queries and introduce unified backend endpoint for merged portfolio data.
- Robustness: Decouple Python scraper into a standalone FastAPI service.
- Accuracy: Use historical NAVs for precise XIRR and P&L calculation.
- Quality: Increase test coverage for XIRR and TLH logic.
- UX: Add frontend Error Boundaries and loading skeletons.